# ecommerce-api-docs

./: .gitignore  README.md  build_structured_docs.py  pyproject.toml  scrape_lazada.py  scrape_shopee.py  scrape_tiktok_shop.py
config/: settings.py
data/legacy/output_old/scraped/: lazada.json
data/processed/lazada/guides/: index.json
data/processed/shopee/guides/: index.json
data/processed/tiktok/guides/: index.json
data/raw/tiktok/developer-guide/: how-to-contact-support.json  tiktok-shop-developer-guide.json
data/raw/tiktok/partner-guide/: about-the-partner-center-console.json
output/: lazada.json  tiktok_shop.json
output/scraped/: shopee.json
output/scraped/lazada/category/: GetBrandByPages.json  GetCategoryTree.json
output/scraped/lazada/choice/: GetChoiceProductItem.json  GetChoiceProducts.json  GetChoiceSkuItemRelationBySku.json
output/scraped/lazada/content/: McnContentCompleteCreateVideo.json  McnContentInitCreateVideo.json  McnContentPropertyTagList.json  McnContentReplySchedulePublish.json  McnContentUploadVideoBlock.json  McnProductValidator.json  changeProductBackground.json  fixHand.json  productImageMatch.json  queryContentReviewRecords.json  tryOnCloth.json
output/scraped/lazada/datamoat/: DataMoatComputeRisk.json  DataMoatLogin.json
src/ecommerce_api_docs/: __init__.py  __main__.py
src/ecommerce_api_docs/exporters/: __init__.py  base.py  json.py  markdown.py
src/ecommerce_api_docs/models/: __init__.py  api_documentation.py
src/ecommerce_api_docs/scrapers/: __init__.py  base.py  lazada.py  shopee.py
src/ecommerce_api_docs/utils/: __init__.py  cli.py
src/ecommerce_docs/: __init__.py  cli.py
tests/: test_exporters.py  test_scrapers.py
(+4616 files in other folders)
